# LA1PL2G01

./: CMakeLists.txt  README.md  acessar_dados.c  acessar_dados.h  acessar_estado.c  acessar_estado.h  dados.c  dados.h  interface.c  interface.h  io.c  io.h  logica.c  logica.h  main.c  modificar_estado.c  modificar_estado.h  principal.c
Testes/: Testes.md  test_simple_commands.c  test_simple_commands.h  test_simple_interface.c  test_simple_interface.h
bot/: acessar_estadoBot.c  acessar_estadoBot.h  auxiliaresBot.c  auxiliaresBot.h  dados.c  dados.h  interfaceBot.c  interfaceBot.h  ioBot.c  ioBot.h  logicaBot.c  logicaBot.h  main.c  modificar_estadoBot.c  modificar_estadoBot.h
doc/: _c_make_lists_8txt.xml  _camadas_2dados_2dados_8h.xml  _r_e_a_d_m_e_8md.xml  _screenshots_8md.xml  _testes_8md.xml  acessar__estado_bot_8h.xml  auxiliares_8c.xml  auxiliares_8h.xml  auxiliares_bot_8c.xml  auxiliares_bot_8h.xml  bot_2dados_8c.xml  bot_2dados_8h.xml  clion-log_8txt.xml  dados_8c.xml  dir_2b1a7fcba2a1a7f16c30c7b103ae5f24.xml  dir_340b1ddc1f593d39d2cae672ee24fe41.xml  dir_46693151be61b54de19ce420b97749e1.xml  dir_4a50ee42b5eebf260edd0f1c7236f1eb.xml  dir_59c25d53ef7c41a6d022020f2a10f793.xml  dir_5f48bbbdf6cf9132fc4204b556e52c6e.xml  dir_6071c69b9dd92f4c3b7fc76e2c323395.xml  dir_6c2021cd34c9760a02dc49e94bce5fb9.xml  dir_6fa95c07ad20a93ada06f0f7ac3aa1fc.xml  dir_7bb70df8ef549276df8e6b422ef9a7f9.xml  dir_8989997884cc89dbf2f83f79e581ba48.xml  dir_8ef0dc86b5bba6eb5abd44be31a3f828.xml  dir_938b764780631b4973039ca5ff92f774.xml  dir_a57d4b84e5fba657f628dc88078b5032.xml  (+32 more)
(+583 files in other folders)
